[T1006-MG < T1019-MG] Add LBA checks to all Create and Delete procedures in C API (#517)
* Initial Impl

* NextPermittedEdge introduced

* revert moving constructor to cpp

* edge from and edge to methods expanded with lba check

* minor fix

* extended update methods

* initial implementation

* added check to path expand procedure

* Added integration tests for read query procedures

* Added integration tests for update query modules

* Added unit tests for creation of vertex, adding and removing vertex label

* additional check

* changed iterator type to reference

* Added unit tests for create edge

* Corrected query module in create edge

* fixed bug in Update property for node; fixed 2 e2e tests

* fixed merge errors

* Expanded FineGrainedAuthChecker with HasGlobalPermissionOnVertices and HasGlobalPermissionOnEdges

* Removed two wrong checks; Added two global checks

* return null added

* introduced new mgp_error value

* fixed endless loop

* replaced enum

* intermediate

* tests updated

* PermissionDeniedError -> AuthorizationError rename

* rename in enum permission_denied error -> authorization error

* mgp_vertex_remove_label check improved

* quotes changed; order of imports fixed

* string constant introduced

* import fixed

* yaml format

Co-authored-by: Josip Mrden <josip.mrden@memgraph.io>

--- a/tests/e2e/lba_procedures/workloads.yaml
+++ b/tests/e2e/lba_procedures/workloads.yaml
@@ -4,12 +4,10 @@ read_query_modules_cluster: &read_query_modules_cluster
       args: ["--bolt-port", "7687", "--log-level=TRACE"]
       log_file: "lba-e2e.log"
       setup_queries:
-        [
-          "CREATE USER admin IDENTIFIED BY 'test';",
-          "GRANT ALL PRIVILEGES TO admin",
-          "CREATE USER user IDENTIFIED BY 'test';",
-          "GRANT ALL PRIVILEGES TO user",
-        ]
+        - "CREATE USER admin IDENTIFIED BY 'test';"
+        - "GRANT ALL PRIVILEGES TO admin"
+        - "CREATE USER user IDENTIFIED BY 'test';"
+        - "GRANT ALL PRIVILEGES TO user"
       validation_queries: []
 
 update_query_modules_cluster: &update_query_modules_cluster
@@ -18,12 +16,10 @@ update_query_modules_cluster: &update_query_modules_cluster
       args: ["--bolt-port", "7687", "--log-level=TRACE"]
       log_file: "lba-e2e.log"
       setup_queries:
-        [
-          "CREATE USER admin IDENTIFIED BY 'test';",
-          "GRANT ALL PRIVILEGES TO admin",
-          "CREATE USER user IDENTIFIED BY 'test';",
-          "GRANT ALL PRIVILEGES TO user",
-        ]
+        - "CREATE USER admin IDENTIFIED BY 'test';"
+        - "GRANT ALL PRIVILEGES TO admin"
+        - "CREATE USER user IDENTIFIED BY 'test';"
+        - "GRANT ALL PRIVILEGES TO user"
       validation_queries: []
 
 show_privileges_cluster: &show_privileges_cluster
@@ -61,8 +57,21 @@ show_privileges_cluster: &show_privileges_cluster
         - "Create User Bruno;"
         - "Grant Auth to Bruno;"
         - "Deny Create_Delete On Labels * to Bruno"
+      validation_queries: []
 
 read_permission_queries: &read_permission_queries
+  cluster:
+    main:
+      args: ["--bolt-port", "7687", "--log-level=TRACE"]
+      log_file: "lba-e2e.log"
+      setup_queries:
+        - "CREATE USER admin IDENTIFIED BY 'test';"
+        - "GRANT ALL PRIVILEGES TO admin"
+        - "CREATE USER user IDENTIFIED BY 'test';"
+        - "GRANT ALL PRIVILEGES TO user"
+      validation_queries: []
+
+create_delete_query_modules_cluster: &create_delete_query_modules_cluster
   cluster:
     main:
       args: ["--bolt-port", "7687", "--log-level=TRACE"]
@@ -84,7 +93,6 @@ update_permission_queries_cluster: &update_permission_queries_cluster
         - "GRANT ALL PRIVILEGES TO admin;"
         - "CREATE USER user IDENTIFIED BY 'test'"
         - "GRANT ALL PRIVILEGES TO user;"
-
       validation_queries: []
 
 workloads:
@@ -99,6 +107,12 @@ workloads:
     proc: "tests/e2e/lba_procedures/procedures/"
     args: ["lba_procedures/update_query_modules.py"]
     <<: *update_query_modules_cluster
+
+  - name: "create-delete-query-modules"
+    binary: "tests/e2e/pytest_runner.sh"
+    proc: "tests/e2e/lba_procedures/procedures/"
+    args: ["lba_procedures/create_delete_query_modules.py"]
+    <<: *create_delete_query_modules_cluster
 
   - name: "show-privileges"
     binary: "tests/e2e/pytest_runner.sh"
