Added TypedValue with new accessors and simplified requests

--- a/src/query/v2/CMakeLists.txt
+++ b/src/query/v2/CMakeLists.txt
@@ -33,7 +33,8 @@ set(mg_query_v2_sources
     stream/common.cpp
     trigger.cpp
     trigger_context.cpp
-    bindings/typed_value.cpp)
+    bindings/typed_value.cpp
+    accessors.cpp)
 
 find_package(Boost REQUIRED)
 
