--- a/src/storage/v3/CMakeLists.txt
+++ b/src/storage/v3/CMakeLists.txt
@@ -16,21 +16,6 @@ set(storage_v3_src_files
     shard.cpp
     storage.cpp)
 
-# #### Replication #####
-define_add_lcp(add_lcp_storage lcp_storage_cpp_files generated_lcp_storage_files)
-
-add_lcp_storage(replication/rpc.lcp SLK_SERIALIZE)
-
-add_custom_target(generate_lcp_storage_v3 DEPENDS ${generated_lcp_storage_files})
-
-set(storage_v3_src_files
-    ${storage_v3_src_files}
-    replication/replication_client.cpp
-    replication/replication_server.cpp
-    replication/serialization.cpp
-    replication/slk.cpp
-    ${lcp_storage_cpp_files})
-
 # ######################
 find_package(gflags REQUIRED)
 find_package(Threads REQUIRED)
@@ -39,4 +24,4 @@ add_library(mg-storage-v3 STATIC ${storage_v3_src_files})
 target_link_libraries(mg-storage-v3 Threads::Threads mg-utils gflags)
 
 add_dependencies(mg-storage-v3 generate_lcp_storage)
-target_link_libraries(mg-storage-v3 mg-rpc mg-slk mg-expr)
+target_link_libraries(mg-storage-v3 mg-slk mg-expr mg-io)
