--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -321,6 +321,10 @@ target_link_libraries(${test_prefix}storage_v2_isolation_level mg-storage-v2)
 add_unit_test(replication_persistence_helper.cpp)
 target_link_libraries(${test_prefix}replication_persistence_helper mg-storage-v2)
 
+add_unit_test(cpp_api.cpp)
+target_link_libraries(${test_prefix}cpp_api mg-query)
+target_include_directories(${test_prefix}cpp_api PRIVATE ${CMAKE_SOURCE_DIR}/include)
+
 # Test mg-auth
 if(MG_ENTERPRISE)
   add_unit_test(auth.cpp)
