--- a/tests/e2e/lba_procedures/workloads.yaml
+++ b/tests/e2e/lba_procedures/workloads.yaml
@@ -30,33 +30,33 @@ show_privileges_cluster: &show_privileges_cluster
       setup_queries:
         - "Create User Josip;"
         - "Grant Read On Labels :Label1 to Josip;"
-        - "Deny Read On Labels :Label2 to Josip;"
+        - "Grant Nothing On Labels :Label2 to Josip;"
         - "Grant Update On Labels :Label3 to Josip;"
-        - "Deny Update On Labels :Label4 to Josip;"
+        - "Grant Read On Labels :Label4 to Josip;"
         - "Grant Create_Delete On Labels :Label5 to Josip;"
-        - "Deny Create_Delete On Labels :Label6 to Josip;"
+        - "Grant Update On Labels :Label6 to Josip;"
         - "Grant Create_Delete On Labels :Label7 to Josip;"
-        - "Deny Read On Labels :Label7 to Josip;"
+        - "Grant Nothing On Labels :Label7 to Josip;"
 
         - "Create User Boris;"
         - "Grant Auth to Boris;"
         - "Grant Read On Labels :Label1 to Boris;"
-        - "Deny Read On Labels :Label2 to Boris;"
+        - "Grant Nothing On Labels :Label2 to Boris;"
         - "Grant Update On Labels :Label3 to Boris;"
-        - "Deny Update On Labels :Label4 to Boris;"
+        - "Grant Read On Labels :Label4 to Boris;"
         - "Grant Create_Delete On Labels :Label5 to Boris;"
-        - "Deny Create_Delete On Labels :Label6 to Boris;"
+        - "Grant Update On Labels :Label6 to Boris;"
         - "Grant Create_Delete On Labels :Label7 to Boris;"
-        - "Deny Read On Labels :Label7 to Boris;"
+        - "Grant Nothing On Labels :Label7 to Boris;"
 
         - "Create User Niko;"
         - "Grant Auth to Niko;"
         - "Grant Create_Delete On Labels * to Niko"
-        - "Deny Update On Labels * to Niko"
+        - "Grant Read On Labels * to Niko"
 
         - "Create User Bruno;"
         - "Grant Auth to Bruno;"
-        - "Deny Create_Delete On Labels * to Bruno"
+        - "Grant Update On Labels * to Bruno"
       validation_queries: []
 
 read_permission_queries: &read_permission_queries
