Add proper transaction handling (#550)

--- a/src/storage/v3/CMakeLists.txt
+++ b/src/storage/v3/CMakeLists.txt
@@ -6,13 +6,7 @@ add_custom_target(generate_lcp_ast_storage_v3 DEPENDS ${generated_lcp_storage_v3
 
 set(storage_v3_src_files
     ${lcp_storage_v3_cpp_files}
-    commit_log.cpp
-    constraints.cpp
     temporal.cpp
-    durability/durability.cpp
-    durability/serialization.cpp
-    durability/snapshot.cpp
-    durability/wal.cpp
     edge_accessor.cpp
     indices.cpp
     key_store.cpp
@@ -26,21 +20,6 @@ set(storage_v3_src_files
     shard_rsm.cpp
     storage.cpp)
 
-# #### Replication #####
-define_add_lcp(add_lcp_storage lcp_storage_cpp_files generated_lcp_storage_files)
-
-add_lcp_storage(replication/rpc.lcp SLK_SERIALIZE)
-
-add_custom_target(generate_lcp_storage_v3 DEPENDS ${generated_lcp_storage_files})
-
-set(storage_v3_src_files
-    ${storage_v3_src_files}
-    replication/replication_client.cpp
-    replication/replication_server.cpp
-    replication/serialization.cpp
-    replication/slk.cpp
-    ${lcp_storage_cpp_files})
-
 # ######################
 find_package(gflags REQUIRED)
 find_package(Threads REQUIRED)
@@ -51,4 +30,4 @@ target_link_libraries(mg-storage-v3 Threads::Threads mg-utils gflags)
 target_include_directories(mg-storage-v3 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/bindings)
 
 add_dependencies(mg-storage-v3 generate_lcp_storage)
-target_link_libraries(mg-storage-v3 mg-rpc mg-slk mg-expr)
+target_link_libraries(mg-storage-v3 mg-slk mg-expr mg-io)
