--- a/tests/unit/CMakeLists.txt
+++ b/tests/unit/CMakeLists.txt
@@ -433,3 +433,7 @@ target_link_libraries(${test_prefix}local_transport mg-io)
 # Test MachineManager with LocalTransport
 add_unit_test(machine_manager.cpp)
 target_link_libraries(${test_prefix}machine_manager mg-io mg-coordinator mg-storage-v3)
+
+# Test ProtobufTransport
+add_unit_test(protobuf_transport.cpp)
+target_link_libraries(${test_prefix}protobuf_transport mg-io protobuf)
