Add working version of Memgraph compiled with LLVM stdlib

--- a/libs/CMakeLists.txt
+++ b/libs/CMakeLists.txt
@@ -103,7 +103,7 @@ import_external_library(antlr4 STATIC
   ${CMAKE_CURRENT_SOURCE_DIR}/antlr4/runtime/Cpp/include/antlr4-runtime
   SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/antlr4/runtime/Cpp
   CMAKE_ARGS # http://stackoverflow.com/questions/37096062/get-a-basic-c-program-to-compile-using-clang-on-ubuntu-16/38385967#38385967
-             -DWITH_LIBCXX=OFF # because of debian bug
+             -DWITH_LIBCXX=ON # because of debian bug
              -DCMAKE_SKIP_INSTALL_ALL_DEPENDENCY=true
              -DCMAKE_CXX_STANDARD=20
              -DANTLR_BUILD_CPP_TESTS=OFF
@@ -155,6 +155,7 @@ import_external_library(rocksdb STATIC
   ${CMAKE_CURRENT_SOURCE_DIR}/rocksdb/lib/librocksdb.a
   ${CMAKE_CURRENT_SOURCE_DIR}/rocksdb/include
   CMAKE_ARGS -DUSE_RTTI=ON
+             -DCMAKE_CXX_FLAGS="-stdlib=libc++"
              -DWITH_TESTS=OFF
              -DGFLAGS_NOTHREADS=OFF
              -DCMAKE_INSTALL_LIBDIR=lib
@@ -207,6 +208,7 @@ import_external_library(librdkafka STATIC
              -DWITH_ZSTD=OFF
              -DENABLE_LZ4_EXT=OFF
              -DCMAKE_INSTALL_LIBDIR=lib
+             -DCMAKE_CXX_FLAGS="-stdlib=libc++"
              -DWITH_SSL=ON
              # If we want SASL, we need to install it on build machines
              -DWITH_SASL=OFF)
@@ -223,7 +225,8 @@ import_external_library(protobuf STATIC
   ${PROTOBUF_ROOT}/lib/libprotobuf.a
   ${PROTOBUF_ROOT}/include
   BUILD_IN_SOURCE 1
-  CONFIGURE_COMMAND true)
+  CONFIGURE_COMMAND true
+  BUILD_COMMAND $(MAKE))
 
 import_external_library(pulsar STATIC
   ${CMAKE_CURRENT_SOURCE_DIR}/pulsar/pulsar-client-cpp/lib/libpulsarwithdeps.a
@@ -233,6 +236,7 @@ import_external_library(pulsar STATIC
                             -DCMAKE_INSTALL_PREFIX=${CMAKE_CURRENT_SOURCE_DIR}/pulsar/install
                             -DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}
                             -DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}
+                            -DCMAKE_CXX_FLAGS=-stdlib=libc++\ -I/opt/toolchain-v4/include
                             -DBUILD_DYNAMIC_LIB=OFF
                             -DBUILD_STATIC_LIB=ON
                             -DBUILD_TESTS=OFF
