Implement missing message handlers (#563)
Implement the missing message handlers with basic functionality. The
implementation does not include any capabilities to filter based on
expressions.

--- a/src/storage/v3/CMakeLists.txt
+++ b/src/storage/v3/CMakeLists.txt
@@ -16,8 +16,9 @@ set(storage_v3_src_files
     schemas.cpp
     schema_validator.cpp
     shard.cpp
-    bindings/typed_value.cpp
+    storage.cpp
     shard_rsm.cpp
+    bindings/typed_value.cpp
     storage.cpp)
 
 # ######################
